[package]
name = "async-itertools"
version = "0.0.0-a.0"
edition = "2024"
publish = true
repository = "https://github.com/async-itertools/async-itertools"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.90"
description = "`itertools` for `Stream`s"
exclude = ["/.github", "/.gitignore", "/.vscode", "CHANGELOG.md", "CONTRIBUTING.md", "MAINTAINING.md"]

[dependencies]
futures-lite = "2.6.1"
option-entry = "0.1.0"
pin-project-lite = "0.2.16"
